--- a/notebooks/models2onnx.ipynb
+++ b/notebooks/models2onnx.ipynb
@@ -69,6 +69,7 @@
    "outputs": [],
    "source": [
     "import onnxruntime as ort\n",
+    "import torch\n",
     "import torchvision\n",
     "\n",
     "def preprocess_image(image_path):\n",
@@ -124,22 +125,8 @@
     "model_path = MODELS_DIR / \"yolo/1/model.onnx\"\n",
     "\n",
     "model = YOLO(MODELS_DIR / \"yolo/1/yolov8x.pt\")\n",
-    "model.export(format=\"onnx\", dynamic=True, opset=17)\n",
+    "model.export(format=\"onnx\", dynamic=True, opset=12, imgsz=640)\n",
     "shutil.move(model_path.parent / \"yolov8x.onnx\", model_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5880edac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import onnxruntime as ort\n",
-    "import torch\n",
-    "import torchvision\n",
-    "\n",
-    "session = ort.InferenceSession(model_path)"
    ]
   },
   {
@@ -149,21 +136,143 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input = torchvision.transforms.ToTensor()(image)\n",
-    "input = torchvision.transforms.Resize((640, 640))(input)[None, ...]"
+    "import onnxruntime as ort\n",
+    "import torch\n",
+    "from torchvision import transforms\n",
+    "import numpy as np\n",
+    "\n",
+    "session = ort.InferenceSession(model_path)\n",
+    "image = Image.open(random.choice(IMAGES)).convert('RGB')\n",
+    "\n",
+    "def cross_iou_matrix(x1: np.ndarray, y1: np.ndarray, x2: np.ndarray, y2: np.ndarray) -> np.ndarray:\n",
+    "    xmin = np.maximum(x1[..., None], x1[None, ...])\n",
+    "    ymin = np.maximum(y1[..., None], y1[None, ...])\n",
+    "    xmax = np.minimum(x2[..., None], x2[None, ...])\n",
+    "    ymax = np.minimum(y2[..., None], y2[None, ...])\n",
+    "    i = np.maximum(0.0, xmax - xmin) * np.maximum(0.0, ymax - ymin)\n",
+    "    u = (x2 - x1) * (y2 - y1)\n",
+    "    return i / (u[..., None] + u[None, ...] - i)\n",
+    "\n",
+    "def nms(x1: np.ndarray,\n",
+    "        y1: np.ndarray,\n",
+    "        x2: np.ndarray,\n",
+    "        y2: np.ndarray,\n",
+    "        scores: np.ndarray,\n",
+    "        class_ids: np.ndarray,\n",
+    "        nms_threshold: float) -> list[int]:\n",
+    "    cross_iou = cross_iou_matrix(x1, y1, x2, y2)\n",
+    "    visited = set()\n",
+    "    result = []\n",
+    "    for i, class_id in enumerate(class_ids):\n",
+    "        if i in visited:\n",
+    "            continue\n",
+    "\n",
+    "        new_ids, *_ = np.where((class_ids == class_id) & (cross_iou[i, ...] >= nms_threshold))\n",
+    "        visited.update(new_ids)\n",
+    "        result.append(new_ids[scores[new_ids].argmax()])\n",
+    "\n",
+    "    return sorted(result, key=lambda i: scores[i], reverse=True)\n",
+    "\n",
+    "class ImageProcessor:\n",
+    "    _MEAN = np.array([0.485, 0.456, 0.406])\n",
+    "    _STD = np.array([0.229, 0.224, 0.225])\n",
+    "\n",
+    "    def __init__(self, model_w, model_h, orig_w, orig_h, nms_iou = 0.75):\n",
+    "        self.model_w = model_w\n",
+    "        self.model_h = model_h\n",
+    "        self.orig_w = orig_w\n",
+    "        self.orig_h = orig_h\n",
+    "        self.transform = transforms.Compose([transforms.Resize((self.model_h, self.model_w)),\n",
+    "                                             transforms.Normalize(mean=self._MEAN, std=self._STD)])\n",
+    "        self.nms_iou = 0.6\n",
+    "\n",
+    "    def estimate_dims(self) -> None:\n",
+    "        self.model_aspect_ratio = self.model_w / self.model_h\n",
+    "        self.orig_aspect_ratio = self.orig_w / self.orig_h\n",
+    "        if self.model_aspect_ratio > self.orig_aspect_ratio:\n",
+    "            self.new_w = int(round(self.orig_h * self.model_aspect_ratio))\n",
+    "            self.new_h = self.orig_h\n",
+    "        else:\n",
+    "            self.new_w = self.orig_w \n",
+    "            self.new_h = int(round(self.orig_w / self.model_aspect_ratio))\n",
+    "\n",
+    "        self.dw = (self.new_w - self.orig_w) // 2\n",
+    "        self.dh = (self.new_h - self.orig_h) // 2\n",
+    "\n",
+    "    def preprocess(self, image: Image.Image) -> torch.Tensor:\n",
+    "        self.estimate_dims()\n",
+    "        output = torch.from_numpy(self._MEAN[..., None, None] * np.ones((3, self.new_h, self.new_w)))\n",
+    "        output[:, self.dh:self.dh + self.orig_h, self.dw:self.dw + self.orig_w] = transforms.ToTensor()(image)\n",
+    "        output = self.transform(output)\n",
+    "        return output\n",
+    "\n",
+    "    def postprocess(self, predictions: np.ndarray) -> np.ndarray:\n",
+    "        x, y, w, h = predictions[:4, ...]\n",
+    "        scores = predictions[4:, ...].T\n",
+    "        x = (x - self.dw) / (self.model_w - self.dw * 2) * self.orig_w\n",
+    "        y = (y - self.dh) / (self.model_h - self.dh * 2) * self.orig_h\n",
+    "        w = w / (self.model_w - self.dw * 2) * self.orig_w\n",
+    "        h = h / (self.model_h - self.dh * 2) * self.orig_h\n",
+    "\n",
+    "        nms_filtered_ids = nms(x - w/2, y - h/2, x + w/2, y + h/2, scores.max(-1), scores.argmax(-1), self.nms_iou)\n",
+    "\n",
+    "        return np.concat((x[nms_filtered_ids, None],\n",
+    "                          y[nms_filtered_ids, None],\n",
+    "                          w[nms_filtered_ids, None],\n",
+    "                          h[nms_filtered_ids, None],\n",
+    "                          scores[nms_filtered_ids, ...]), axis=-1)\n",
+    "\n",
+    "w, h = image.size\n",
+    "processor = ImageProcessor(640, 640, w, h)\n",
+    "input = processor.preprocess(image).unsqueeze(0)\n",
+    "result = session.run(None, {\"images\": input.numpy().astype(np.float32)})\n",
+    "output = processor.postprocess(result[0].squeeze())\n",
+    "\n",
+    "# Extract bounding boxes and confidence scores\n",
+    "boxes = output[:, :4]  # Bounding box coordinates\n",
+    "scores = output[:, 4:]  # Confidence scores\n",
+    "\n",
+    "# Filter out low confidence predictions\n",
+    "threshold = 0.1\n",
+    "filtered_mask = scores.max(axis=1) > threshold\n",
+    "filtered_boxes = boxes[filtered_mask, ...]\n",
+    "filtered_scores = scores[filtered_mask]\n",
+    "\n",
+    "# Convert the image back to a numpy array for plotting\n",
+    "image_np = np.array(image)\n",
+    "\n",
+    "# Plot the image\n",
+    "plt.figure(figsize=(10, 10))\n",
+    "plt.imshow(image_np)\n",
+    "\n",
+    "# Draw bounding boxes\n",
+    "for i in range(filtered_boxes.shape[0]):\n",
+    "    xc, yc, w, h = filtered_boxes[i]\n",
+    "    x, y = xc - w/2, yc - h/2\n",
+    "\n",
+    "    class_id = np.argmax(filtered_scores[i])\n",
+    "    score = filtered_scores[i, class_id]\n",
+    "    color = np.random.rand(3)  # Random color for each box\n",
+    "\n",
+    "    # Draw rectangle\n",
+    "    plt.gca().add_patch(plt.Rectangle((x, y), w, h, \n",
+    "                                      fill=False, edgecolor=color, linewidth=2))\n",
+    "    \n",
+    "    # Add confidence score text\n",
+    "    plt.text(x, y, f\"{class_id:.2f}:{score:.2f}\", color=color, fontsize=12, backgroundcolor=\"white\")\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.axis('off')\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79948567",
+   "id": "263f5a2d",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "result = session.run(None, {\"images\": input.numpy()})\n",
-    "result[0].shape"
-   ]
+   "source": []
   }
  ],
  "metadata": {
